@@ -10677,6 +10677,7 @@ ags_audio_real_start(AgsAudio *audio,
   GList *start_recall_id;
   GList *start_wait_thread, *wait_thread;
   
+  gint64 start_wait_timeout;
   guint audio_channels;
   guint output_pads;
   gint i;
@@ -10795,11 +10796,14 @@ ags_audio_real_start(AgsAudio *audio,
     if(ags_playback_domain_test_flags(playback_domain, AGS_PLAYBACK_DOMAIN_SUPER_THREADED_AUDIO)){
       audio_thread = ags_playback_domain_get_audio_thread(playback_domain,
 							  sound_scope);
-      start_wait_thread = g_list_prepend(start_wait_thread,
-					 audio_thread);
-    
-      ags_thread_add_start_queue(audio_loop,
-				 audio_thread);
+
+      if(audio_thread != NULL){
+	start_wait_thread = g_list_prepend(start_wait_thread,
+					   audio_thread);
+	
+	ags_thread_add_start_queue(audio_loop,
+				   audio_thread);
+      }
     }
     
     while(output_playback != NULL){
@@ -10810,10 +10814,13 @@ ags_audio_real_start(AgsAudio *audio,
 							 sound_scope);
       
 	/* add to start queue */
-	ags_thread_add_start_queue(audio_loop,
-				   channel_thread);
-	start_wait_thread = g_list_prepend(start_wait_thread,
-					   channel_thread);
+	if(channel_thread != NULL){
+	  start_wait_thread = g_list_prepend(start_wait_thread,
+					     channel_thread);
+
+	  ags_thread_add_start_queue(audio_loop,
+				     channel_thread);
+	}
       }
       
       
@@ -10824,13 +10831,36 @@ ags_audio_real_start(AgsAudio *audio,
     /* unref */
     wait_thread = start_wait_thread;
 
+    start_wait_timeout = g_get_monotonic_time() + 5 * G_USEC_PER_SEC;
+
     while(wait_thread != NULL){
-      while(wait_thread->data != NULL &&
-	    !ags_thread_test_status_flags(wait_thread->data, AGS_THREAD_STATUS_SYNCED_FREQ));
+      /* wait thread */
+      g_mutex_lock(AGS_THREAD_GET_START_MUTEX(wait_thread->data));
+
+      if(!ags_thread_test_status_flags(wait_thread->data, AGS_THREAD_STATUS_START_DONE)){
+	ags_thread_set_status_flags(wait_thread->data, AGS_THREAD_STATUS_START_WAIT);
+	
+	while(ags_thread_test_status_flags(wait_thread->data, AGS_THREAD_STATUS_START_WAIT) &&
+	      !ags_thread_test_status_flags(wait_thread->data, AGS_THREAD_STATUS_START_DONE) &&
+	      g_get_monotonic_time() < start_wait_timeout){
+	  g_cond_wait_until(AGS_THREAD_GET_START_COND(wait_thread->data),
+			    AGS_THREAD_GET_START_MUTEX(wait_thread->data),
+			    start_wait_timeout);
+	}
+      }
+	
+      g_mutex_unlock(AGS_THREAD_GET_START_MUTEX(wait_thread->data));
+	
+      if(g_get_monotonic_time() > start_wait_timeout){
+	g_critical("sync timeout");
+
+	goto ags_audio_real_start_ONE_SCOPE_TIMEOUT;
+      }
 
       wait_thread = wait_thread->next;
     }
     
+  ags_audio_real_start_ONE_SCOPE_TIMEOUT:
     g_list_free_full(start_wait_thread,
 		     g_object_unref);
 
@@ -10920,11 +10950,14 @@ ags_audio_real_start(AgsAudio *audio,
       if(ags_playback_domain_test_flags(playback_domain, AGS_PLAYBACK_DOMAIN_SUPER_THREADED_AUDIO)){
 	audio_thread = ags_playback_domain_get_audio_thread(playback_domain,
 							    i);
-	start_wait_thread = g_list_prepend(start_wait_thread,
-					   audio_thread);
+
+	if(audio_thread != NULL){
+	  start_wait_thread = g_list_prepend(start_wait_thread,
+					     audio_thread);
         
-	ags_thread_add_start_queue(audio_loop,
-				   audio_thread);
+	  ags_thread_add_start_queue(audio_loop,
+				     audio_thread);
+	}
       }
       
       while(output_playback != NULL){
@@ -10933,12 +10966,15 @@ ags_audio_real_start(AgsAudio *audio,
 	if(ags_playback_test_flags(playback, AGS_PLAYBACK_SUPER_THREADED_CHANNEL)){
 	  channel_thread = ags_playback_get_channel_thread(playback,
 							   i);
-	  start_wait_thread = g_list_prepend(start_wait_thread,
-					   channel_thread);
-	  
-	  /* add to start queue */
-	  ags_thread_add_start_queue(audio_loop,
-				     channel_thread);
+
+	  if(channel_thread != NULL){
+	    start_wait_thread = g_list_prepend(start_wait_thread,
+					       channel_thread);
+	    
+	    /* add to start queue */
+	    ags_thread_add_start_queue(audio_loop,
+				       channel_thread);
+	  }
 	}
 	
 	/* iterate */
@@ -10949,13 +10985,36 @@ ags_audio_real_start(AgsAudio *audio,
     /* unref */
     wait_thread = start_wait_thread;
 
+    start_wait_timeout = g_get_monotonic_time() + 5 * G_USEC_PER_SEC;
+
     while(wait_thread != NULL){
-      while(wait_thread->data != NULL &&
-	    !ags_thread_test_status_flags(wait_thread->data, AGS_THREAD_STATUS_SYNCED_FREQ));
+      /* wait thread */
+      g_mutex_lock(AGS_THREAD_GET_START_MUTEX(wait_thread->data));
+	
+      if(!ags_thread_test_status_flags(wait_thread->data, AGS_THREAD_STATUS_START_DONE)){
+	ags_thread_set_status_flags(wait_thread->data, AGS_THREAD_STATUS_START_WAIT);
+
+	while(ags_thread_test_status_flags(wait_thread->data, AGS_THREAD_STATUS_START_WAIT) &&
+	      !ags_thread_test_status_flags(wait_thread->data, AGS_THREAD_STATUS_START_DONE) &&
+	      g_get_monotonic_time() < start_wait_timeout){
+	  g_cond_wait_until(AGS_THREAD_GET_START_COND(wait_thread->data),
+			    AGS_THREAD_GET_START_MUTEX(wait_thread->data),
+			    start_wait_timeout);
+	}
+      }
+	
+      g_mutex_unlock(AGS_THREAD_GET_START_MUTEX(wait_thread->data));
+	
+      if(g_get_monotonic_time() > start_wait_timeout){
+	g_critical("sync timeout");
+
+	goto ags_audio_real_start_ALL_SCOPE_TIMEOUT;
+      }
 
       wait_thread = wait_thread->next;
     }
     
+  ags_audio_real_start_ALL_SCOPE_TIMEOUT:
     g_list_free_full(start_wait_thread,
 		     g_object_unref);
 
