@@ -432,7 +432,7 @@ ags_config_real_load_defaults(AgsConfig *config)
   ags_config_set_value(config, AGS_CONFIG_SOUNDCARD_0, "samplerate", "48000");
   ags_config_set_value(config, AGS_CONFIG_SOUNDCARD_0, "buffer-size", "512");
   ags_config_set_value(config, AGS_CONFIG_SOUNDCARD_0, "use-cache", "true");
-  ags_config_set_value(config, AGS_CONFIG_SOUNDCARD_0, "cache-buffer-size", "8192");
+  ags_config_set_value(config, AGS_CONFIG_SOUNDCARD_0, "cache-buffer-size", "4096");
   ags_config_set_value(config, AGS_CONFIG_SOUNDCARD_0, "format", "16");
 #endif
   
