@@ -35,6 +35,12 @@
   <url type="homepage">https://nongnu.org/gsequencer</url>
 
   <releases>
+    <release version="3.0.5" date="2020-01-19">
+      <description>
+	<p>Improved pulseaudio connect timeout.</p>
+      </description>
+    </release>
+
     <release version="3.0.4" date="2020-01-16">
       <description>
 	<p>Fixed potential SIGSEGV.</p>
